String Intro added